# mu-lang

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  grammar.ebnf  grammar2.ebnf  justfile  tour.md
commands/: who.md
crates/ast/: Cargo.toml
crates/ast/src/: ast_arena.rs  dynamic_arena.rs  lib.rs
crates/diagnosis/: Cargo.toml  README.md
crates/diagnosis/src/: lib.rs  report.rs  snippet.rs
crates/diagnosis/src/report/: tests.rs
crates/diagnosis/src/report/snapshots/: diagnosis__report__tests__emit_report_multi_line.snap  (+7 more)
crates/diagnosis/src/snapshots/: diagnosis__tests__emit_report_multi_line.snap  diagnosis__tests__emit_report_multi_line_large.snap  diagnosis__tests__emit_report_multi_line_large_no_color.snap  diagnosis__tests__emit_report_multi_line_no_color.snap  diagnosis__tests__emit_report_single_line.snap  diagnosis__tests__emit_report_single_line_no_color.snap
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: comments.rs  lib.rs  numbers.rs  strings.rs
crates/lexer/tests/: t1_test_tour_lexing.test  tour.test
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: lib.rs  macros.rs
crates/parser/tests/: t001_parse_empty_block.test  t002_parse_primitive_literals.test  t003_parse_array_literals.test  t004_parse_tuple_literals.test  t005_parse_record_literal.test  t006_parse_lambda_literal.test
crates/span/: README.md
crates/span/src/: lib.rs
crates/syntax/: Cargo.toml  README.md  extract_terminals.js  grammar.ebnf
crates/syntax/src/: ast.rs  grammar.ebnf  grammar.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/syntax/src/parser/: macros.rs  tests.rs
crates/syntax/src/parser/snapshots/: syntax__parser__tests__parse_decl_alias-10.snap  syntax__parser__tests__parse_decl_alias-11.snap  syntax__parser__tests__parse_decl_alias-12.snap  syntax__parser__tests__parse_decl_alias-14.snap  syntax__parser__tests__parse_decl_alias-15.snap  syntax__parser__tests__parse_decl_alias-17.snap  syntax__parser__tests__parse_decl_alias-18.snap  syntax__parser__tests__parse_decl_alias-4.snap  syntax__parser__tests__parse_decl_alias-5.snap  syntax__parser__tests__parse_decl_alias-7.snap  syntax__parser__tests__parse_decl_alias-8.snap  syntax__parser__tests__parse_decl_alias-9.snap  syntax__parser__tests__parse_decl_alias.snap  syntax__parser__tests__parse_decl_class-2.snap  syntax__parser__tests__parse_decl_class.snap  syntax__parser__tests__parse_decl_fn-2.snap  syntax__parser__tests__parse_decl_fn.snap  syntax__parser__tests__parse_decl_trait-2.snap  syntax__parser__tests__parse_decl_trait.snap  syntax__parser__tests__parse_expr_array-2.snap  syntax__parser__tests__parse_expr_array.snap  syntax__parser__tests__parse_expr_assign-2.snap  syntax__parser__tests__parse_expr_assign-3.snap  syntax__parser__tests__parse_expr_assign-4.snap  syntax__parser__tests__parse_expr_assign-5.snap  syntax__parser__tests__parse_expr_assign-6.snap  syntax__parser__tests__parse_expr_assign-7.snap  syntax__parser__tests__parse_expr_assign-8.snap  syntax__parser__tests__parse_expr_assign-9.snap  syntax__parser__tests__parse_expr_assign.snap  syntax__parser__tests__parse_expr_binary-2.snap  syntax__parser__tests__parse_expr_binary-3.snap  syntax__parser__tests__parse_expr_binary-4.snap  syntax__parser__tests__parse_expr_binary-5.snap  syntax__parser__tests__parse_expr_binary-6.snap  syntax__parser__tests__parse_expr_binary-7.snap  syntax__parser__tests__parse_expr_binary-8.snap  syntax__parser__tests__parse_expr_binary.snap  syntax__parser__tests__parse_expr_block-2.snap  syntax__parser__tests__parse_expr_block-3.snap  (+203 more)
crates/syntax/syntax_derive/: Cargo.toml  lib.rs
crates/testing/: Cargo.toml  README.md
crates/testing/mu-testing-cli/: Cargo.toml
crates/testing/mu-testing-cli/src/: main.rs  process.rs
crates/testing/mu-testing-macro/: Cargo.toml
crates/testing/mu-testing-macro/src/: lib.rs
crates/testing/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: comments.rs  lib.rs  numbers.rs  strings.rs
experiments/scheduler/: Cargo.toml
experiments/scheduler/src/: lib.rs  main.rs
experiments/src/: future_scheduler.rs  lib.rs  main.rs  piggyback_scheduler.rs
experiments/type-system/: Cargo.toml  README.md  emit.md  grammar.ebnf  test.ast  test.js  test.mu  test.src
experiments/type-system/src/: ast.rs  builtins.rs  error.rs  infer.rs  js.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  ty.rs
experiments/type-system/tests/: infer.rs  parser.rs  snapshot.rs  test.mu
experiments/type-system/tests/inputs/: full-ok
experiments/type-system/tests/snapshots/: infer__call.snap  infer__full.snap  infer__if_expr.snap  infer__if_expr_with_non_bool_cond.snap  infer__scoping.snap  infer__shadowing.snap  infer__variable.snap  parser__full.snap  parser__simple_expr.snap  parser__top_level_without_semi.snap  parser__types.snap  snapshot__tests@full-ok.snap
fuzz/afl/: .gitignore  Cargo.toml  README.md
fuzz/afl/fuzz_targets/: lexer_from_bytes.rs  parser_from_bytes.rs
fuzz/afl/suite/: comments.mu  concurrency.mu  control-flow.mu  data.mu  enums.mu  errors.mu  functions.mu  literals.mu  modules.mu  operators.mu  with.mu
fuzz/libfuzz/: Cargo.toml
fuzz/libfuzz/fuzz_targets/: lexer_from_bytes.rs
fuzz/libfuzzer/: Cargo.toml
fuzz/libfuzzer/fuzz_targets/: lexer_from_bytes.rs  parser_from_bytes.rs
fuzz/mu-fuzz-cli/: Cargo.toml
fuzz/mu-fuzz-cli/src/: libfuzzer.rs  main.rs  process.rs  reproduce.rs
site/: internals.md
site/book/: book.toml
site/book/src/: SUMMARY.md  control-flow.md  introduction.md  values.md  variables.md
