[package]
name = "mu-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2str = { version = "1.4.1", features = ["allocator_api"] }
bumpalo = { version = "3.10.0", features = ["allocator_api"] }
mu-lexer = { path ='../lexer' }
