[package]
name = "mu-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2str = "1.4.0"
logos = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
mu_testing = { package = "mu-testing", path = "../testing" }

[features]
fuzz = []
