[package]
name = "mu-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mu-lexer = { path = "../lexer" }
mu-ast = { path = "../ast" }
mu-errors = { path = "../errors" }

[dev-dependencies]
mu-testing = { path = "../testing" }
