[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.9.1", features = ["serde"] }
insta = "1.21.0"
logos = "0.12.1"
serde = { version = "1.0.147", features = ["derive"] }
stacker = "0.1.15"
thiserror = "1.0.37"
syntax_derive = { path = "./syntax_derive" }

span = { path = "../span" }
