[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]
members = ["."]


[dependencies]
concurrent-queue = "1.2.2"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["full"]}

