[package]
name = "type-system"
version = "0.1.0"
edition = "2021"


[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
thiserror = "1.0.32"
ast2str = "1.4.1"
structopt = "0.3.26"
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
