[package]
name = "type-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
thiserror = "1.0.32"
structopt = "0.3.26"
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
indexmap = { version = "1.9.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.62"
insta = { version = "1.19.0", features = ["yaml", "glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
