[package]
name = "mu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mu-lexer]
path = "../../crates/lexer"
features = ["fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "lexer_from_bytes"
path = "fuzz_targets/lexer_from_bytes.rs"
test = false
doc = false
